Test crontab properties